@@ -252,18 +252,20 @@ public final class DefaultSessionTest extends AbstractTestCase {
         assertEquals(new Command(COMMAND, EMPTY), session.readCommand());
     }
 
-    public void testReadCommand_ReadLineReturnsNull() {
+    public void testReadCommand_ReadLineReturnsNull_ReturnsNull() {
         session.controlConnectionReader = new BufferedReader(new StringReader(COMMAND)) {
             public boolean ready() { return true; }
             public String readLine() { return null; }
         };
-        try {
-            session.readCommand();
-            fail("Expected AssertFailedException");
-        }
-        catch(AssertFailedException expected) {
-            // do nothing; expected
-        }
+        assertNull(session.readCommand());
+
+//        try {
+//            session.readCommand();
+//            fail("Expected AssertFailedException");
+//        }
+//        catch(AssertFailedException expected) {
+//            // do nothing; expected
+//        }
     }
 
     public void testReadCommand_Closed_ReturnsNull() {
