@@ -5,6 +5,7 @@ Changes in version 2.6 (Apr 2015)
 ------------------------------------------
 - BUG #25: OutOfMemoryError: Java heap space; clean up closed sessions. Session: Added boolean Session.isClosed(). AbstractFtpServer: Clean up closed sessions.
 - BUG #24: Close passiveModeDataSocket if in passive mode.
+- BUG/FEATURE #27: Treat null incoming command as terminating the session.
 
 
 Changes in version 2.5 (May 2014)
